# dedicatedCV

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  DEPLOYMENT_SETUP.md  README.md
.github/: CD.md  CI.md  DEPLOYMENT_SETUP.md
.zap/: rules.tsv
backend/: .dockerignore  .env.example  .gitignore  AZURE_INSIGHTS_SETUP.md  Dockerfile  Makefile  QUICKSTART.md  README.md  coverage.xml  docker-compose.yml  main.py  pyproject.toml  test.txt
backend/alembic/: env.py
backend/alembic/versions/: 1fb7d4566967_add_cv_models_cv_work_experience_.py  25f9841d5e79_enhance_education_model_with_gpa_honors_.py  5b2f9c3c0f0b_add_sharelink_table.py  6275f7ac4957_.py  7c1c0c9d8a2b_add_profile_picture_to_user.py  ab8c04eca7ff_.py  bce03a9702bf_add_project_table.py  f9bd29d36ee8_initial_migration_with_user_table.py
backend/app/: main.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: ai.py  auth.py  cvs.py  dashboard.py  educations.py  exports.py  health.py  projects.py  skills.py  translation.py  work_experiences.py
backend/app/core/: config.py  deps.py  monitoring.py  security.py
backend/app/db/: base.py  base_class.py
backend/app/models/: __init__.py  cv.py  education.py  project.py  share_link.py  skill.py  user.py  work_experience.py
backend/app/schemas/: __init__.py  ai.py  cv.py  dashboard.py  education.py  export.py  project.py  skill.py  translation.py  user.py  work_experience.py
backend/app/services/: ai_service.py  blob_service.py  translation_service.py
backend/scripts/: setup.sh
backend/tests/: README.md  conftest.py  test_auth.py  test_cvs.py  test_educations.py  test_health.py  test_main.py  test_projects.py  test_skills.py  test_work_experiences.py
frontend/: .cta.json  .dockerignore  .env.example  API_INTEGRATION.md  Dockerfile  (+8 more)
translation-service/: .coverage  .gitignore  Dockerfile  Makefile  coverage.xml  main.py  pyproject.toml  requirements.txt
translation-service/tests/: conftest.py  test_main.py
(+87 files in other folders)
