[project]
name = "backend"
version = "0.1.0"
description = "FastAPI Backend with PostgreSQL"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy>=2.0.35",
    "alembic>=1.13.3",
    "psycopg2-binary>=2.9.9",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.12",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "email-validator>=2.2.0",
    "bcrypt>=5.0.0",
    "argon2-cffi>=25.1.0",
    "azure-monitor-opentelemetry>=1.2.0",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.48b0",
    "groq>=0.11.0",
    "azure-storage-blob>=12"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.27.2",
    "black>=24.10.0",
    "ruff>=0.7.3",
    "mypy>=1.13.0",
    "pip-audit>=2.7.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["tests*", "alembic*"]

[dependency-groups]
dev = [
    "ruff>=0.14.7",
]
