[project]
name = "translation-service"
version = "0.1.0"
requires-python = ">=3.10,<3.12"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.30.6",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.0",
    "email-validator==2.2.0",
    "transformers==4.47.1",
    "torch==2.1.2",
    "sentencepiece==0.2.0",
    "typing_extensions==4.15.0",
]

[project.optional-dependencies]
test = [
    "pytest==9.0.2",
    "httpx==0.28.1",
]
dev = [
    "ruff==0.7.3",
    "mypy==1.13.0",
    "pip-audit==2.7.0",
    "pytest==9.0.2",
    "pytest-cov==6.0.0",
    "httpx==0.28.1",
]
